# meridian-wyckoff

./: .coverage  .cursorrules  .dockerignore  .gitignore  AGENTS.md  BUGFIX_PLAN.md  CONSTRUCTION.md  Dockerfile  ISSUES.md  NEXT_SESSION_PROMPT.md  PANEL_IMPLEMENTATION.md  PROGRESS.md  README.md  ROADMAP.md  STARTUP_GUIDE.md  check_system_integrity.py  config.example.yaml  config.yaml  debug_probe.py  docker-compose.yml  fetch_data.py  health_check.py  health_report.json  pyproject.toml  pyrightconfig.json  requirements.txt  run.py  run_evolution.py  run_live.py  run_output.txt  setup.py  start.bat  system_state.json  trace_evolution.py  的判断非常敏锐——A股和加密市场的威科夫形态确实存在变体，需要逻辑型适.txt  逻辑.txt  项目开发计划书.md
.claude/: settings.local.json
.sisyphus/: boulder.json  handoff_annotation_evolution.md  handoff_evolution_diagnosis.md  handoff_evolution_wfa_fix.md  handoff_frontend_redesign.md
.trae/: agents.md
backend/: FIX_PROMPT.md  main.py
data/: ETHUSDT_1d.csv  ETHUSDT_4h.csv  ETHUSDT_8h.csv
docs/: ARCHITECTURE.md  AUDIT_PLAN.md  BREAKOUT_DESIGN.md  ERROR_HANDLING_STANDARD.md  IMPLEMENTATION_PROMPT.md  LIVE_VS_EVOLUTION_ANALYSIS.md  MERIDIAN_ARCHITECTURE.md  PLAN_IMPLEMENTATION_STATUS.md  PLUGIN_DEVELOPMENT.md  PLUGIN_SYSTEM_REFACTOR.md  SUPPLY_DEMAND_DETECTOR_DESIGN.md  SYSTEM_DESIGN_V3.md  TECH_SPECS.md  WORKBENCH_DESIGN.md  web_design_plan.md
evolution_results/: cycle_1000_20260302_215951.json  cycle_1001_20260302_215951.json  cycle_1002_20260302_215951.json  cycle_1003_20260302_215951.json  cycle_1004_20260302_215951.json  cycle_1005_20260302_215951.json  cycle_1006_20260302_215951.json  cycle_1007_20260302_215951.json  cycle_1008_20260302_215951.json  cycle_1009_20260302_215951.json  cycle_100_20260302_215446.json  cycle_100_20260302_215735.json  cycle_100_20260302_215933.json  cycle_100_20260302_220141.json  cycle_100_20260302_220247.json  cycle_100_20260302_220701.json  cycle_100_20260302_221215.json  cycle_100_20260302_222006.json  cycle_100_20260302_225014.json  cycle_100_20260302_233645.json  cycle_1010_20260302_215951.json  cycle_1011_20260302_215951.json  cycle_1012_20260302_215951.json  (+5071 more)
(+763 files in other folders)
